Movement through mouse cursor, as well as Player Controller Created

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/Game.Game
 GlobalDefaultGameMode=/Game/Config/GM_TITS.GM_TITS_C
+EditorStartupMap=/Game/Maps/Game.Game
+GlobalDefaultServerGameMode=/Game/Config/GM_TITS.GM_TITS_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
